# GPU_Controller

./: .coverage  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
controller/: __init__.py  __main__.py  config.py  controller.py  k8s_client.py  priority.py  resource_view.py
examples/: workloads.yaml
k8s/: deployment.yaml
tests/: conftest.py  test_controller.py  test_integration.py
